@@ -1,5 +1,5 @@
 
- OpenSSL 1.0.0-beta6-dev xx XXX xxxx
+ OpenSSL 1.0.0 29 Mar 2010
 
  Copyright (c) 1998-2009 The OpenSSL Project
  Copyright (c) 1995-1998 Eric A. Young, Tim J. Hudson
